--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
-
+    implementation "androidx.cardview:cardview:1.0.0"
 }
