--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:2.4.2"
     annotationProcessor "androidx.room:room-compiler:2.4.2"
+
+    implementation 'com.amplifyframework:aws-api:1.35.3'
+    implementation 'com.amplifyframework:aws-datastore:1.35.3'
 }
