--- a/taskmaster/build.gradle
+++ b/taskmaster/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+//    repositories {
+//        google()
+//        jcenter()
+//    }
+
+    dependencies {
+        // Add this line into `dependencies` in `buildscript`
+        classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.2'
+    }
+}
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.1' apply false
@@ -7,3 +18,7 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+// Add this line at the end of the file
+apply plugin: 'com.amplifyframework.amplifytools'
