--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -59,4 +59,8 @@ dependencies {
 
     implementation 'com.amplifyframework:aws-auth-cognito:1.35.4'
 
+    implementation 'com.amplifyframework:aws-storage-s3:1.35.4'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
