--- a/taskmaster/app/src/main/AndroidManifest.xml
+++ b/taskmaster/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.taskmaster">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:name=".taskMasterApplication"
@@ -13,6 +16,7 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"
             android:label="@string/title_activity_login" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -23,26 +27,46 @@
         <activity
             android:name=".SignUpActivity"
             android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar"
+
             android:label="@string/title_activity_signUp"/>
         <activity
             android:name=".VerificationActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".DetailTask"
+            android:theme="@style/AppTheme.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".SettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".AllTask"
+            android:theme="@style/AppTheme.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".AddTask"
-            android:exported="false" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.SEND"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+            <data android:mimeType="text/plain"/>
+        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="image/*"/>
+                <data android:mimeType="text/plain"/>
+
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:exported="false">
-
         </activity>
     </application>
 
