--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -63,4 +63,15 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+
+    implementation 'com.amplifyframework:aws-geo-location:1.0.0'
+    // Add this dependency to integrate MapLibre into your app
+    implementation 'com.amplifyframework:maplibre-adapter:1.0.0'
+
 }
