--- a/taskmaster/amplify/backend/backend-config.json
+++ b/taskmaster/amplify/backend/backend-config.json
@@ -69,5 +69,23 @@
         }
       ]
     }
+  },
+  "analytics": {
+    "taskmaster": {
+      "service": "Pinpoint",
+      "providerPlugin": "awscloudformation"
+    }
+  },
+  "predictions": {
+    "speechGeneratorcae16910": {
+      "providerPlugin": "awscloudformation",
+      "service": "Polly",
+      "convertType": "speechGenerator"
+    },
+    "translateText9449cd8c": {
+      "providerPlugin": "awscloudformation",
+      "service": "Translate",
+      "convertType": "translateText"
+    }
   }
 }
