--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
     // Add this dependency to integrate MapLibre into your app
     implementation 'com.amplifyframework:maplibre-adapter:1.0.0'
 
+    implementation 'com.amplifyframework:aws-analytics-pinpoint:1.35.4'
+    implementation 'com.amplifyframework:aws-predictions:1.35.4'
+
 }
