--- a/taskmaster/app/build.gradle
+++ b/taskmaster/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     implementation 'com.amplifyframework:aws-analytics-pinpoint:1.35.4'
     implementation 'com.amplifyframework:aws-predictions:1.35.4'
 
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
+
 }
