--- a/taskmaster/app/src/main/AndroidManifest.xml
+++ b/taskmaster/app/src/main/AndroidManifest.xml
@@ -72,6 +72,10 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:exported="false">
         </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
     </application>
 
 </manifest>
