--- a/taskmaster/build.gradle
+++ b/taskmaster/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
      google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
 
@@ -14,6 +15,13 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
 
 task clean(type: Delete) {
